# enzian-pio-nic

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  build.sc  flake.nix  run_container.sh
data/: .gitignore  common.py  loopback.csv  pcie_lat.csv  plot.py  requirements.txt
data/eci/: eci_lat.csv  loopback.csv  plot.py
data/pcie/: loopback.csv  pcie_lat.csv  plot.py  requirements.txt
hw/spinal/axi/: Axi4StreamCustom.scala  AxiAdapter.scala  AxiDma.scala  AxiDmaDescMux.scala  AxiDpRam.scala  AxiStreamFifo.scala  AxiStreamFrameLen.scala  package.scala
hw/spinal/axi/sim/: Axi4Master.scala  Axi4StreamMaster.scala  Axi4StreamSlave.scala
hw/spinal/lauberhorn/: Config.scala  DebugPlugin.scala  DmaControlPlugin.scala  GenEngineVerilog.scala  Global.scala  GlobalCSRPlugin.scala  MacInterface.scala  NicEngine.scala  PacketAlloc.scala  PacketBuffer.scala  ProfilerPlugin.scala  Scheduler.scala  package.scala
hw/spinal/lauberhorn/host/: BypassCmdSink.scala  DatapathPlugin.scala  DatapathService.scala  PreemptionService.scala  package.scala
hw/spinal/lauberhorn/net/: Decoder.scala  DecoderSink.scala  Encoder.scala  EncoderSource.scala  Grpc.scala  Http.scala  Ip.scala  ProtoDecoder.scala  ProtoEncoder.scala  ProtoState.scala  RawEncoder.scala  RxDecoderSink.scala  Tcp.scala  TxEncoderSource.scala  Udp.scala  package.scala
hw/spinal/pionic/: AxiDmaPlugin.scala  CmacInterface.scala  CmacInterfacePlugin.scala  Config.scala  ConfigDatabase.scala  Control.scala  CoreControl.scala  DebugPlugin.scala  DmaControlPlugin.scala  GenEngineVerilog.scala  Global.scala  GlobalCSRPlugin.scala  HostService.scala  MacInterface.scala  NicEngine.scala  PacketAlloc.scala  PacketAllocSim.scala  PacketBuffer.scala  PacketSink.scala  PioNicConfig.scala  PioNicEngine.scala  PioNicEngineSim.scala  PreemptionService.scala  ProfilerPlugin.scala  Profiling.scala  RegAllocator.scala  RxDecoderSink.scala  RxPacketDispatch.scala  Scheduler.scala  SchedulerPlugin.scala  TestStreamUnion.scala  TestUnionSim.scala  package.scala
hw/spinal/pionic/eci/: EciDecoupledRxTxProtocol.scala  EciEngine.scala  EciInterfacePlugin.scala  EciPioProtocol.scala
hw/spinal/pionic/host/: DatapathPlugin.scala  DatapathService.scala  HostService.scala  PreemptionService.scala  package.scala
hw/spinal/pionic/net/: DecoderPipeline.scala  Ethernet.scala  Grpc.scala  Http.scala  Ip.scala  OncRpcCall.scala  OncRpcReply.scala  ProtoDecoder.scala  ProtoEncoder.scala  ProtoState.scala  RawEncoder.scala  RxDecoderSink.scala  Tcp.scala  TxEncoderSource.scala  Udp.scala  package.scala
hw/spinal/pionic/pcie/: PcieBridgeInterface.scala  PcieBridgeInterfacePlugin.scala  PcieEngine.scala  package.scala
hw/spinal/pionic/sim/: CSRSim.scala  PacketAllocSim.scala  PioNicEngineSim.scala  SimApp.scala  XilinxCmacSim.scala  package.scala
hw/tests/lauberhorn/: AsSimBusMaster.scala  CSRSim.scala  PacketAllocSim.scala  XilinxCmacSim.scala
hw/tests/lauberhorn/sim/: DbFactory.scala  HostPacketDescSim.scala  OncRpcSuiteFactory.scala  TimestampSuiteFactory.scala  (+1 more)
hw/tests/pionic/: AsSimBusMaster.scala  CSRSim.scala  DutSimFunSuite.scala  FormalStreamDispatcherWithEnable.scala  PacketAllocSim.scala  XilinxCmacSim.scala
hw/vhdl/: SchedTmpl.vhd
model/: lauberhorn.tla
model/lauberhorn.toolbox/lauberhorn_model_isolation/: MC.cfg  MC.tla  MC_TE.out  lauberhorn.tla
model/lauberhorn.toolbox/lauberhorn_model_isolation_large/: MC.cfg  MC.tla  MC_TE.out  lauberhorn.tla
sw/: .gitignore  CMakeLists.txt  Makefile  README.md  cmac.c  common.mk  config.c  debug.c  diag.c  pionic.c  pionic.h  test.c  timeit.h
sw/apps/eci-rt-test/: Makefile
sw/apps/kernel-module-test/: .gitignore  Makefile  README.md  activator.c  handler.c  kernel-module-test.c  test.sh
sw/apps/loopback-bypass/: .gitignore  Makefile  README.md  loopback-bypass.c
sw/apps/rt-eci-test/: rt-eci-test.c
sw/core/: core-common.h  core-eci.h  core-pcie.h  debug.h
sw/core/eci/: core.h
sw/core/pcie/: core.h
sw/devices/: .gitignore  cmac.dev  lauberhorn_eci.dev  lauberhorn_eci_EthernetDecoder.dev  lauberhorn_eci_IpDecoder.dev  lauberhorn_eci_IpEncoder.dev  lauberhorn_eci_OncRpcCallDecoder.dev  lauberhorn_eci_OncRpcReplyEncoder.dev  lauberhorn_eci_UdpDecoder.dev  lauberhorn_eci_decoderSink.dev  lauberhorn_eci_dma.dev  lauberhorn_eci_hostIf.dev  lauberhorn_eci_macIf.dev  lauberhorn_eci_preempt.dev  lauberhorn_eci_profiler.dev  lauberhorn_eci_sched.dev  lauberhorn_eci_threadRouter.dev  lauberhorn_eci_worker.dev
sw/drivers/: cmac.c  profile.c
sw/eci/: .gitignore  core.c  pionic-test.c  pionic.c  pionic.h  test.c
sw/include/: api.h  cmac.h  common.h  debug.h  diag.h  hal.h  profile.h
sw/include/lauberhorn/: uapi.h
sw/kernel-module/: Makefile  README.md  common.h  ioctl.c  ioctl.h  main.c  pionic.c
sw/kmod/: .gitignore  Makefile  README.md  bypass.c  chrdev.c  cmac.c  common.h  datapath.c  inttypes.h  ioctl.c  ioctl.h  main.c  misc.c  reload_kmod.sh  sched.c  worker.c
sw/kmod/LICENSES/: bsd-3-clause.txt
sw/kmod/mackerel_support/: mackerel.h
sw/pcie/: Makefile  core.c  pionic-test.c  pionic.c  pionic.h  test.c  timeit.h
sw/rt/: eci.c  pcie.c
sw/rt-include/: api.h  cmac.h  core-eci.h  core-pcie.h  diag.h  hal.h  profile.h  rt-common.h
sw/rt/common/: cmac.c  config.c  diag.c  profile.c
sw/usr/: usr.c
sw/usr-include/: api.h  hexdump.h  lauberhorn.h  pionic.h
sw/utils/: rescan-pcie.sh
vivado/: .gitignore  create_bitstream.tcl  create_project.tcl  project.tcl
vivado/eci/: create_bitstream.tcl  create_project.tcl
vivado/eci/bd/: design_1.tcl
vivado/eci/rtl/: Ram_1w_1ra.v  Ram_1w_1rs_Generic.v  axil_regs_interconnect.v  dcs_2_axi.sv  dcs_cdc.sv  lauberhorn_eci.vhd  pio_nic_eci.vhd  sync_reset_bufg.v
vivado/eci/xdc/: floorplan.xdc  timing.xdc
vivado/ip/pio_nic_engine/: PioNicEngine.tcl  PioNicEngine.xdc  PioNicEngine_ooc.xdc  axis_async_fifo.tcl  axis_async_fifo.xdc  component.xml  timing.xdc
vivado/pcie/: create_bitstream.tcl  create_project.tcl
vivado/pcie/xdc/: enzian_pcie.xdc  floorplan.xdc
vivado/xdc/: enzian_pcie.xdc  floorplan.xdc
(+88 files in other folders)
